--- a/action.yaml
+++ b/action.yaml
@@ -47,11 +47,13 @@ runs:
 
     - name: Run neophile update
       if: ${{ inputs.mode }} == "update"
+      shell: bash
       working-directory: ${{ inputs.working-directory }}
       run: neophile update ${{ inputs.targets }}
 
     - name: Run neophile update --pr
       if: ${{ inputs.mode }} == "pr"
+      shell: bash
       working-directory: ${{ inputs.working-directory }}
       run: neophile update --pr ${{ inputs.targets }}
       env:
