--- a/action.yaml
+++ b/action.yaml
@@ -40,19 +40,19 @@ runs:
       run: python -m pip install --upgrade neophile
 
     - name: Run neophile check
-      if: inputs.mode == "check"
+      if: inputs.mode == 'check'
       shell: bash
       working-directory: ${{ inputs.working-directory }}
       run: neophile check ${{ inputs.types }}
 
     - name: Run neophile update
-      if: inputs.mode == "update"
+      if: inputs.mode == 'update'
       shell: bash
       working-directory: ${{ inputs.working-directory }}
       run: neophile update ${{ inputs.types }}
 
     - name: Run neophile update --pr
-      if: inputs.mode == "pr"
+      if: inputs.mode == 'pr'
       shell: bash
       working-directory: ${{ inputs.working-directory }}
       run: neophile update --pr ${{ inputs.types }}
